--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -18,8 +18,9 @@
     <div class="formFooter">
         Don't have an account?<a href="#"> Sign Up </a>
     </div>
+
     <div id="formFooter">
-      <a class="underlineHover" href="#">Forgot Password?</a>
+      <a class="underlineHover" href="#">Forgot Password?!</a>
     </div>
 
   </div>
