--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -8,11 +8,26 @@
     <!-- Tabs Titles -->
 
     <!-- Login Form -->
-    <form>
-      <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
-      <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
+    <form [formGroup]="myFormValidation" (ngSubmit)="onLogin()">
+     
+      <input type="text" formControlName="login" [(ngModel)]="login" class="form-control" placeholder="login" [ngClass]="{ 'is-invalid': submitted && f.login.errors }">
+      <div *ngIf="submitted && f.login.errors" class="invalid-feedback">
+        <div *ngIf="f.login.errors.required">Login is required</div>
+      </div>
+      
+      <input type="password" formControlName="password"  [(ngModel)]="password" class="form-control" placeholder="password"  [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
+      <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+        <div *ngIf="f.password.errors.required">Password is required</div>
+        <div *ngIf="f.password.errors.minlength">Password must be at least 4 characters</div>
+    </div>
+
       <input type="submit" class="fadeIn fourth" value="Log In">
+    
     </form>
+
+    <div  [hidden]="errorLogin">
+        Invalid username or password  
+    </div>
 
     <!-- Remind Passowrd -->
     <div class="formFooter">
